--- a/Changes
+++ b/Changes
@@ -3,9 +3,10 @@ MacPatch - Changes
 MacPatch v3.8.0
 
 * Server
-- Updated Python Min-Requirement to 3.11
+- Updated Python Min-Requirement to 3.12
 - Updated Python Modules
 - Refactored API and Console app for module changes
+- Updated Nginx 
 
 * Client
 
